--- a/utilities/acceptance-tests/suites/AdminSecurity/NewAdminCheckPrivileges.html
+++ b/utilities/acceptance-tests/suites/AdminSecurity/NewAdminCheckPrivileges.html
@@ -915,7 +915,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Range Class:</td>
+	<td>Range Data Type:</td>
 	<td></td>
 </tr>
 <tr>
@@ -1322,12 +1322,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>The search indexer is idle.</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>The most recent update was at</td>
+	<td>The search indexer has been idle since</td>
 	<td></td>
 </tr>
 <tr>
