--- a/utilities/acceptance-tests/suites/CreatePeople/AddFacultyInfo2.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/AddFacultyInfo2.html
@@ -108,7 +108,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Can't find the concept you want? Create your own.</td>
+	<td>link=Select or create a VIVO-defined concept.</td>
 	<td></td>
 </tr>
 <tr>
@@ -148,7 +148,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=showAddForm</td>
+	<td>id=showAddFormButton</td>
 	<td></td>
 </tr>
 <tr>
@@ -238,7 +238,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//img[@alt='add'])[36]</td>
+	<td>xpath=(//img[@alt='add'])[37]</td>
 	<td></td>
 </tr>
 <tr>
@@ -288,7 +288,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//img[@alt='add'])[41]</td>
+	<td>xpath=(//img[@alt='add'])[42]</td>
 	<td></td>
 </tr>
 <tr>
@@ -752,11 +752,6 @@
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=USA1234567890</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>css=#translatorOf-Document-List &gt; li &gt; a[title=&quot;name&quot;]</td>
 	<td></td>
 </tr>
 <tr>
