--- a/utilities/acceptance-tests/suites/CreatePeople/PublicFacultyInfo.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/PublicFacultyInfo.html
@@ -81,8 +81,18 @@
 	<td></td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>link=Faculty, Jane</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
 	<td></td>
 </tr>
 <tr>
@@ -214,11 +224,6 @@
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=USA1234567890</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>css=#translatorOf-Document-List &gt; li &gt; a[title=&quot;name&quot;]</td>
 	<td></td>
 </tr>
 <tr>
