--- a/utilities/acceptance-tests/suites/CustomAdvisesForm/ChangeAdvises.html
+++ b/utilities/acceptance-tests/suites/CustomAdvisesForm/ChangeAdvises.html
@@ -267,7 +267,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Doe, John, M.Sc. Master of Science&nbsp;&nbsp;candidate, 2007 - 2012</td>
+	<td>Doe, John, M.Sc.&nbsp;&nbsp;candidate, 2007 - 2012</td>
 	<td></td>
 </tr>
 <tr>
@@ -344,7 +344,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Doe, John, M.Sc. Master of Science&nbsp;&nbsp;candidate, 2007 - 2012</td>
+	<td>Doe, John, M.Sc.&nbsp;&nbsp;candidate, 2007 - 2012</td>
 	<td></td>
 </tr>
 <tr>
