--- a/utilities/acceptance-tests/suites/CustomAdvisesForm/CheckPublicView.html
+++ b/utilities/acceptance-tests/suites/CustomAdvisesForm/CheckPublicView.html
@@ -82,7 +82,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Doe, John, M.Sc. Master of Science&nbsp;&nbsp;candidate, 2007 - 2012</td>
+	<td>Doe, John, M.Sc.&nbsp;&nbsp;candidate, 2007 - 2012</td>
 	<td></td>
 </tr>
 <tr>
