--- a/utilities/acceptance-tests/suites/CustomPositionsForm/ChangePositions.html
+++ b/utilities/acceptance-tests/suites/CustomPositionsForm/ChangePositions.html
@@ -119,7 +119,7 @@
 <!--Correct the dates of the Carroll College position-->
 <tr>
 	<td>clickAndWait</td>
-	<td>//section[@id='individual-info']/header/ul/li[1]/a[2]/img</td>
+	<td>css=a.edit-relatedBy &gt; img.edit-individual</td>
 	<td></td>
 </tr>
 <tr>
@@ -191,7 +191,7 @@
 <!--Change the title for Carroll University position-->
 <tr>
 	<td>clickAndWait</td>
-	<td>//section[@id='individual-info']/header/ul/li[2]/a[2]/img</td>
+	<td>xpath=(//img[@alt='edit this entry'])[4]</td>
 	<td></td>
 </tr>
 <tr>
@@ -258,7 +258,7 @@
 <!--Change the title for Cornell University position-->
 <tr>
 	<td>clickAndWait</td>
-	<td>//section[@id='individual-info']/header/ul/li[1]/a[2]/img</td>
+	<td>css=a.edit-relatedBy &gt; img.edit-individual</td>
 	<td></td>
 </tr>
 <tr>
