--- a/utilities/acceptance-tests/suites/AdminSecurity/RebuildSearchIndex.html
+++ b/utilities/acceptance-tests/suites/AdminSecurity/RebuildSearchIndex.html
@@ -83,6 +83,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>name=rebuild</td>
 	<td></td>
