--- a/utilities/acceptance-tests/suites/CreatePeople/DeleteFacultyInfo.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/DeleteFacultyInfo.html
@@ -66,13 +66,13 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>Faculty Member</td>
+	<td>clickAndWait</td>
+	<td>link=Faculty Member</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Faculty Member</td>
+	<td>verifyTextPresent</td>
+	<td>Faculty Member</td>
 	<td></td>
 </tr>
 <tr>
@@ -467,26 +467,6 @@
 <tr>
 	<td>clickAndWait</td>
 	<td>css=a.delete-assigneeFor &gt; img.delete-individual</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTitle</td>
-	<td>Edit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=submit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTitle</td>
-	<td>Faculty, Jane</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>css=a.delete-translatorOf &gt; img.delete-individual</td>
 	<td></td>
 </tr>
 <tr>
@@ -3175,6 +3155,77 @@
 <tr>
 	<td>waitForPageToLoad</td>
 	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>VIVO Site Administration</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Index</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Index of Contents</td>
+	<td></td>
+</tr>
+<!--Delete remainders-->
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Conference</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Conference</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Variety of Apes in Africa</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Variety of Apes in Africa</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Edit this individual</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Individual Control Panel</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value='Edit This Individual']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Individual Editing Form</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>name=_delete</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertConfirmation</td>
+	<td>Are you SURE you want to delete this individual? If in doubt, CANCEL.</td>
 	<td></td>
 </tr>
 <tr>
