--- a/utilities/acceptance-tests/suites/CreatePeople/EditFacultyInfo.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/EditFacultyInfo.html
@@ -122,8 +122,13 @@
 	<td></td>
 </tr>
 <tr>
+	<td>click</td>
+	<td>id=showAddFormButton</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
-	<td>link=Create your own concept</td>
+	<td>link=Select or create a VIVO-defined concept.</td>
 	<td></td>
 </tr>
 <tr>
@@ -178,7 +183,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=showAddForm</td>
+	<td>id=showAddFormButton</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Edit</td>
 	<td></td>
 </tr>
 <tr>
@@ -458,7 +468,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//img[@alt='add'])[36]</td>
+	<td>xpath=(//img[@alt='add'])[37]</td>
 	<td></td>
 </tr>
 <tr>
@@ -729,11 +739,6 @@
 <tr>
 	<td>assertTitle</td>
 	<td>Faculty, Jane</td>
-	<td></td>
-</tr>
-<tr>
-	<td>selectWindow</td>
-	<td>null</td>
 	<td></td>
 </tr>
 <tr>
@@ -1056,11 +1061,6 @@
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=USA1234567890</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>css=#translatorOf-Document-List &gt; li &gt; a[title=&quot;name&quot;]</td>
 	<td></td>
 </tr>
 <tr>
