--- a/utilities/acceptance-tests/suites/OntologyManagement/RebuildSearchIndex.html
+++ b/utilities/acceptance-tests/suites/OntologyManagement/RebuildSearchIndex.html
@@ -83,18 +83,23 @@
 	<td></td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>name=rebuild</td>
 	<td></td>
 </tr>
 <tr>
-	<td>waitForTextPresent</td>
-	<td>Reset the search index and re-populate it.</td>
+	<td>assertTitle</td>
+	<td>Rebuild Search Index</td>
 	<td></td>
 </tr>
 <tr>
-	<td>assertTitle</td>
-	<td>Rebuild Search Index</td>
+	<td>waitForTextPresent</td>
+	<td>Reset the search index and re-populate it.</td>
 	<td></td>
 </tr>
 <tr>
