Holly made test case changes

--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateActivity.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateActivity.html
@@ -225,7 +225,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Organization for Primate Elderly Care</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -599,7 +599,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Can't find the concept you want? Create your own.</td>
+	<td>link=Select or create a VIVO-defined concept.</td>
 	<td></td>
 </tr>
 <tr>
