--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateCourse.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateCourse.html
@@ -205,7 +205,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Organization for Introduction to Primate Health</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -230,7 +230,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Course for Introduction to Primate Health</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -390,7 +390,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=exact:Can't find the concept you want? Create your own.</td>
+	<td>link=Select or create a VIVO-defined concept.</td>
 	<td></td>
 </tr>
 <tr>
@@ -511,7 +511,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Document for Introduction to Primate Health</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -612,7 +612,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//img[@alt='add'])[16]</td>
+	<td>xpath=(//img[@alt='add'])[19]</td>
 	<td></td>
 </tr>
 <tr>
