--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateLocation.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateLocation.html
@@ -170,7 +170,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Room for Jane Memorial Building</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -215,7 +215,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Geographic Location for Jane Memorial Building</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -261,7 +261,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Material Entity for Jane Memorial Building</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
