--- a/utilities/acceptance-tests/suites/AddPublications/AddChapter.html
+++ b/utilities/acceptance-tests/suites/AddPublications/AddChapter.html
@@ -248,7 +248,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Can't find the concept you want? Create your own.</td>
+	<td>link=Select or create a VIVO-defined concept.</td>
 	<td></td>
 </tr>
 <tr>
