--- a/utilities/acceptance-tests/suites/AddPublications/ValidateFields.html
+++ b/utilities/acceptance-tests/suites/AddPublications/ValidateFields.html
@@ -568,7 +568,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=showAddForm</td>
+	<td>id=showAddFormButton</td>
 	<td></td>
 </tr>
 <tr>
@@ -608,7 +608,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=showAddForm</td>
+	<td>id=showAddFormButton</td>
 	<td></td>
 </tr>
 <tr>
@@ -629,11 +629,6 @@
 <tr>
 	<td>verifyTextPresent</td>
 	<td>url: This field must not be empty.</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>urlType: This field must not be empty. </td>
 	<td></td>
 </tr>
 <tr>
@@ -910,7 +905,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Agent for Nintendo O.K. for Kids</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -940,7 +935,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Agent for Nintendo O.K. for Kids</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -1052,7 +1047,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Event for Nintendo O.K. for Kids</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -1087,7 +1082,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Event for Nintendo O.K. for Kids</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -1229,11 +1224,6 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Document Part for Nintendo O.K. for Kids</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
 	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
@@ -1310,11 +1300,6 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Document for Nintendo O.K. for Kids</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
 	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
@@ -1381,7 +1366,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Geographic Region for Nintendo O.K. for Kids</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -1416,7 +1401,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Geographic Region for Nintendo O.K. for Kids</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -1745,7 +1730,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Create your own concept</td>
+	<td>link=Select or create a VIVO-defined concept.</td>
 	<td></td>
 </tr>
 <tr>
@@ -1912,7 +1897,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Document for Nintendo O.K. for Kids</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -1963,11 +1948,6 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Document for Nintendo O.K. for Kids</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
 	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
@@ -1983,17 +1963,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//h3[@id='reproduces']/a/img</td>
+	<td>css=a.add-reproduces</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertTitle</td>
 	<td>Edit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Select an existing Document for Nintendo O.K. for Kids</td>
 	<td></td>
 </tr>
 <tr>
