--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateEquipment.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateEquipment.html
@@ -175,7 +175,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Organization for Primate Feeder</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -206,7 +206,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Facility for Primate Feeder</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
