--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateEvent.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateEvent.html
@@ -301,7 +301,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Geographic Region for Primate Health Conference</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -352,7 +352,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Geographic Location for Primate Health Conference</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -407,7 +407,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Facility for Primate Health Conference</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -530,7 +530,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Event for Primate Health Conference</td>
+	<td>If you don't find the appropriate entry on the selection list above:</td>
 	<td></td>
 </tr>
 <tr>
@@ -565,7 +565,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Can't find the concept you want? Create your own.</td>
+	<td>link=Select or create a VIVO-defined concept.</td>
 	<td></td>
 </tr>
 <tr>
