--- a/utilities/acceptance-tests/suites/AddPublications/PublicationDisplay.html
+++ b/utilities/acceptance-tests/suites/AddPublications/PublicationDisplay.html
@@ -129,8 +129,13 @@
 	<td></td>
 </tr>
 <tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
 	<td>click</td>
-	<td>css=input.pubCheckbox</td>
+	<td>css=input.itemCheckbox</td>
 	<td></td>
 </tr>
 <tr>
@@ -222,7 +227,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=input.pubCheckbox</td>
+	<td>css=input.itemCheckbox</td>
 	<td></td>
 </tr>
 <tr>
