Holly made more test case changes.

--- a/utilities/acceptance-tests/suites/AddRoles/GrantDisplay.html
+++ b/utilities/acceptance-tests/suites/AddRoles/GrantDisplay.html
@@ -170,7 +170,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=input.grantCheckbox</td>
+	<td>css=input.itemCheckbox</td>
 	<td></td>
 </tr>
 <tr>
@@ -267,7 +267,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=input.grantCheckbox</td>
+	<td>css=input.itemCheckbox</td>
 	<td></td>
 </tr>
 <tr>
