--- a/utilities/acceptance-tests/suites/AddRoles/VerifyAllRolesSearchable.html
+++ b/utilities/acceptance-tests/suites/AddRoles/VerifyAllRolesSearchable.html
@@ -253,6 +253,11 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
+	<td>link=people</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
 	<td>link=events</td>
 	<td></td>
 </tr>
@@ -287,6 +292,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[6]</td>
+	<td>Librarian, Lily Associate Librarian ... Show Me the Primates! ...</td>
+</tr>
+<tr>
 	<td>verifyElementPresent</td>
 	<td>link=Show Me the Primates!</td>
 	<td></td>
@@ -309,6 +319,11 @@
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=Librarians for the Better Treatment of Primates</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Librarian, Lily</td>
 	<td></td>
 </tr>
 <!--Verify search results for LIBRARIAN-->
@@ -338,16 +353,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>Librarian, Lily Associate Librarian</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Librarians for the Better Treatment of Primates Committee</td>
-	<td></td>
-</tr>
-<tr>
 	<td>verifyElementPresent</td>
 	<td>link=Librarian, Lily</td>
 	<td></td>
@@ -356,6 +361,66 @@
 	<td>verifyElementPresent</td>
 	<td>link=Librarians for the Better Treatment of Primates</td>
 	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Reference Division</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Show Me the Primates!</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Primates of the World</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Carroll College</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Amercian Library Association</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>css=span.display-title</td>
+	<td>Associate Librarian</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[2]/span</td>
+	<td>Committee</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[3]/span</td>
+	<td>Department</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[4]/span</td>
+	<td>Association</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[5]/span</td>
+	<td>Museum</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[6]/span</td>
+	<td>College</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[7]/span</td>
+	<td>Association</td>
 </tr>
 <!--Verify search results for ANIMAL-->
 <tr>
@@ -388,6 +453,16 @@
 	<td>link=Animal Librarianship</td>
 	<td></td>
 </tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[2]/span</td>
+	<td>Conference</td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=USAIN Conference</td>
+	<td></td>
+</tr>
 <!--Verify search results for CARROLL-->
 <tr>
 	<td>type</td>
@@ -406,7 +481,17 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
+	<td>link=people</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
 	<td>link=organizations</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Carroll College</td>
 	<td></td>
 </tr>
 <tr>
@@ -416,8 +501,13 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=Carroll College</td>
+	<td>link=Librarian, Lily</td>
 	<td></td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[2]/span</td>
+	<td>Associate Librarian</td>
 </tr>
 <!--Verify search results for LIBRARY-->
 <tr>
@@ -437,7 +527,17 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
+	<td>link=people</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
 	<td>link=organizations</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Amercian Library Association</td>
 	<td></td>
 </tr>
 <tr>
@@ -447,8 +547,13 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=Amercian Library Association</td>
+	<td>link=Librarian, Lily</td>
 	<td></td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[2]/span</td>
+	<td>Associate Librarian</td>
 </tr>
 <!--Verify search results for FACULTY-->
 <tr>
@@ -540,6 +645,11 @@
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Search results for 'poa'</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=events</td>
 	<td></td>
 </tr>
 <tr>
