--- a/utilities/acceptance-tests/suites/CustomEducationForm/SearchEducationBackground.html
+++ b/utilities/acceptance-tests/suites/CustomEducationForm/SearchEducationBackground.html
@@ -108,13 +108,18 @@
 	<td></td>
 </tr>
 <tr>
+	<td>verifyElementPresent</td>
+	<td>link=Wisconsin</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Wisconsin State or Province</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=Wisconsin</td>
+	<td>link=University of Wisconsin</td>
 	<td></td>
 </tr>
 <tr>
@@ -124,8 +129,13 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=University of Wisconsin</td>
+	<td>link=United States of America</td>
 	<td></td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[3]/span</td>
+	<td>Country</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
